--- a/.travis.yml
+++ b/.travis.yml
@@ -2,6 +2,8 @@ language: python
 python:
   - "2.7"
 # install dependencies
+before_install:
+ - sudo apt-get install graphviz
 install: pip install -r requirements.txt
 # command to run tests
 script: nosetests
