--- a/.travis.yml
+++ b/.travis.yml
@@ -4,6 +4,8 @@ python:
 # install dependencies
 before_install:
  - sudo apt-get install graphviz
-install: pip install -r requirements.txt
+install:
+ - pip install -r requirements.txt
+ - pip install -r test_requirements.txt
 # command to run tests
 script: nosetests
