--- a/.travis.yml
+++ b/.travis.yml
@@ -1,11 +1,13 @@
 language: python
 python:
-  - "2.7"
+  - "3.6"
+  - "3.7"
 # install dependencies
 before_install:
  - sudo apt-get install graphviz
+
 install:
- - pip install -r requirements.txt
- - pip install -r test_requirements.txt
+ - make install-dev
+
 # command to run tests
-script: nosetests
+script: make test
