--- a/.travis.yml
+++ b/.travis.yml
@@ -1,11 +1,16 @@
 language: python
+
 python:
-  - "2.7"
-# install dependencies
+  - "3.6"
+  - "3.7-dev"
+
+# install system dependencies
 before_install:
  - sudo apt-get install graphviz
+
+# install pip dependencies
 install:
- - pip install -r requirements.txt
- - pip install -r test_requirements.txt
-# command to run tests
-script: nosetests
+ - make install-dev
+
+# execute tests
+script: make test
